Did Some Hyperparameter tuning

--- a/src/notebook/1 . EDA STUDENT PERFORMANCE .ipynb
+++ b/src/notebook/1 . EDA STUDENT PERFORMANCE .ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7eaae1d7",
    "metadata": {},
    "outputs": [],
@@ -74,11 +74,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "57907087",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# df = pd.read_csv('data/stud.csv')\n",
     "df = pd.read_csv('data/stud.csv')"
    ]
   },
